# fvwm3

./: .clang-format  .cvsignore  .disabled-travis.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .mailmap  .release-status  .travis.yml  AUTHORS  BUGS  CHANGELOG.md  CMakeLists.txt  COPYING  ChangeLog  ChangeLog-pre-2.2  ChangeLog-pre-2.4  ChangeLog-pre-2.6.6  DEVELOPERS  Dockerfile  ETHICAL_LICENSE  FAQ  Fvwm.tmpl  INSTALL  INSTALL.fvwm  INSTALL.md  Imakefile  MakeMakefiles  Makefile.am  Makefile.in  NEWS  ONEWS  README  README.autoconf  README.md  TO-DO  TODO  TODO.md  WindowStyle_proposal.txt  Y2K-Compliance  (+32 more)
default-config/: .stalonetrayrc  FvwmScript-ConfirmCopyConfig  FvwmScript-ConfirmQuit  FvwmScript-DateTime  Makefile.am  config  meson.build  stalonetrayrc
doc/: .cvsignore  .gitignore  ChangeLog  FvwmAnimate.adoc  FvwmAuto.adoc  FvwmBacker.adoc  FvwmButtons.adoc  FvwmCommand.adoc  FvwmConsole.adoc  FvwmEvent.adoc  FvwmForm.adoc  FvwmIconMan.adoc  FvwmIdent.adoc  FvwmMFL.adoc  FvwmPager.adoc  FvwmPerl.adoc  FvwmPrompt.adoc  FvwmRearrange.adoc  FvwmScript.adoc  Makefile.am  README  allCommands.html  commands.mak  footer.html.in  fvwm-convert-2.6.adoc  fvwm-man.xsl  fvwm-menu-desktop.adoc  fvwm-menu-directory.adoc  fvwm-menu-xlock.adoc  fvwm-perllib.adoc  fvwm-root.adoc  fvwm.ent.in  fvwm.xsl  fvwm3.adoc  fvwm3.ent  fvwm3.xsl  fvwm3_manpage_source.adoc  fvwm3all.adoc  fvwm3commands.adoc  fvwm3menus.adoc  (+9 more)
doc/commands/: .cvsignore  AddButtonStyle.xml  AddDecor.xml  AddTitleStyle.xml  AddToDecor.xml  AddToFunc.xml  AddToMenu.xml  All.xml  AnimatedMove.xml  Any.xml  Asterisk.xml  Asterix.xml  Beep.xml  (+174 more)
docs/: .cvsignore  ANNOUNCE  BUGS  COMMANDS  CONVENTIONS  ChangeLog  DEVELOPER-CVS  DEVELOPERS  DEVELOPERS.md  FAQ  Makefile.am  Makefile.in  PARSING.md  README  TODO  WindowStyle_proposal.txt  Y2K-Compliance  color_combos  configuration-hints  cvs.html  docs.html  download.html  error_codes  features.html  ftp.html  fvwm-2.2.lsm  fvwm-2.xx.lsm  fvwm.lsm  fvwm.lsm.in  index.html  links.html  mailinglist.html  man-pages.html  mod_changes.html  mod_concept.html  mod_f2m_communication.html  mod_initialization.html  mod_m2f_communication.html  mod_security.html  modules.html  (+8 more)
fvwm/: .cvsignore  CMakeLists.txt  ConfigFvwmDefaults  ConfigFvwmMenuDefaults  ConfigFvwmSetup  Imakefile  Makefile.am  Makefile.in  add_window.c  add_window.h  alpha_header.h  bindings.c  bindings.h  borders.c  borders.h  builtins.c  builtins.h  cmd_defs.c  cmd_defs.h  cmdparser.h  cmdparser_hooks.h  cmdparser_old.c  cmdparser_old.h  colormaps.c  colormaps.h  colors.c  colors.h  colorset.c  colorset.h  commands.h  complex.c  conditional.c  conditional.h  condrc.c  condrc.h  cursor.c  cursor.h  decorations.c  decorations.h  defaults.h  (+111 more)
icons/: ChangeLog  Jlock.xpm  Jnews.xpm  Jrecycle.xpm  Jxlock.xpm  Makefile.am  Makefile.in  Monitor.xpm  Mosaic.xpm  README.mini  README.side  arrdown2.xpm  arrows2.xpm  arrup2.xpm  button-close.xpm  button-horiz.xpm  button-max.xpm  button-vert.xpm  button.xpm  ccode.icon  clamp.xpm  colormap.xpm  datebook.xpm  default.xbm  desk.xpm  dialog_box.xpm  doomface.xpm  editres.xpm  eps.xpm  exit.xpm  flow_chart.xpm  folder2.xpm  folders.xpm  fvwm.bitmap  fvwm.xpm  fvwm2.xpm  fvwm2_big.xpm  fvwm3.xpm  gnu-animal.xpm  graphs.xpm  (+102 more)
libs/: BidiJoin.c  BidiJoin.h  Bindings.c  Bindings.h  CMakeLists.txt  ClientMsg.c  ClientMsg.h  ColorUtils.c  ColorUtils.h  Colorset.c  Colorset.h  CombineChars.c  CombineChars.h  Cursor.c  Cursor.h  Event.c  Event.h  FBidi.c  FBidi.h  FBidiJoin.c  FBidiJoin.h  FCombineChars.c  FCombineChars.h  FEvent.c  FEvent.h  FGettext.c  FGettext.h  FImage.c  FImage.h  FImageLoader.c  FImageLoader.h  FRender.c  FRender.h  FRenderInit.c  FRenderInit.h  FRenderInterface.h  FSMlib.h  FScreen.c  FScreen.h  FShape.c  (+134 more)
modules/: CMakeLists.txt  ChangeLog  ChangeLog-pre-2.2  Makefile.am  Makefile.in
perllib/: ChangeLog  Makefile.am  meson.build
po/: .cvsignore  ChangeLog  FvwmScript.ar.gmo  FvwmScript.ar.po  FvwmScript.da.gmo  FvwmScript.da.po  FvwmScript.de.gmo  FvwmScript.de.po  FvwmScript.es.gmo  FvwmScript.es.po  FvwmScript.fr.gmo  FvwmScript.fr.po  FvwmScript.pot  FvwmScript.ru.gmo  FvwmScript.ru.po  FvwmScript.sv_SE.gmo  FvwmScript.sv_SE.po  FvwmScript.zh_CN.gmo  FvwmScript.zh_CN.po  FvwmScript.zh_TW.po  FvwmTaskBar.ar.gmo  FvwmTaskBar.ar.po  FvwmTaskBar.de.gmo  FvwmTaskBar.de.po  FvwmTaskBar.es.gmo  FvwmTaskBar.es.po  FvwmTaskBar.fr.gmo  FvwmTaskBar.fr.po  FvwmTaskBar.pot  FvwmTaskBar.ru.gmo  FvwmTaskBar.ru.po  FvwmTaskBar.sv_SE.gmo  FvwmTaskBar.sv_SE.po  FvwmTaskBar.zh_CN.gmo  FvwmTaskBar.zh_CN.po  FvwmTaskBar.zh_TW.po  LINGUAS  Makefile.am  POTFILES  README  (+47 more)
rpm/: .cvsignore  ChangeLog  Makefile.am  fvwm.spec.in
textures/: Makefile.am  Makefile.in  README.martys_marbles  arena.xpm  background5.xpm  background8.xpm  bg_blu.xpm  blue7mra.xpm  blue7mrb.xpm  circle_weave.xpm  cloth.xpm  concrete.xpm  cyan5mra.xpm  cyan5mrb.xpm  flames.xpm  funkyblue_weave.xpm  gradient.xpm  gray_stucco.xpm  gree5mra.xpm  gree5mrb.xpm  green_stucco.xpm  grey5mra.xpm  grey5mrb.xpm  greysea.xpm  honey.xpm  marbled.xpm  marbled2.xpm  maze3.xpm  multicolor1_rock.xpm  multicolor3_rock.xpm  ora5mra.xpm  ora5mrb.xpm  plasma_maze.xpm  pool.xpm  pur5mra.xpm  pur5mrb.xpm  raindrops_dark.xpm  red5mra.xpm  red5mrb.xpm  red_rock.xpm  (+17 more)
utils/: .cvsignore  BuildXLockMenu  BuildXLockMenu.1  BuildXLockMenu.in  ChangeLog  Imakefile  Makefile.am  Makefile.in  build_dev.sh  changelog.vim  configure_dev.sh  fvwm-config.1  fvwm-config.in  fvwm-menu-desktop.1  fvwm-menu-desktop.in  fvwm-menu-directory.1  fvwm-menu-directory.in  fvwm-menu-headlines.1  fvwm-menu-headlines.in  fvwm-menu-xlock.1  fvwm-menu-xlock.in  fvwm-version-str.sh  fvwm24_convert.1  fvwm24_convert.in  fvwm_doc2web.sh  fvwm_make_browse_menu.sh  fvwm_make_directory_menu.sh  fvwmbug.1  fvwmbug.in  fvwmbug.sh.in  fvwmrc_convert  fvwmrc_convert.1  make_fvwmdist.sh  quantize_pixmaps  rebuild_dev.sh  xpm-reduce.c  xpm-reduced-rgb.txt  xpmroot.1  xpmroot.c  xselection.c
xpmroot/: Imakefile  Makefile.am  Makefile.in  xpmroot.c  xpmroot.man
(+1146 files in other folders)
